Issue 01.04.01 - Maked design to scrollbar and added all variables for styles

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -12,6 +12,7 @@ body {
 .main {
 	flex: 1 0 auto;
 }
+
 .footer {
 	flex: 0 0 auto;
 }
@@ -22,7 +23,18 @@ body {
   padding: 0 15px;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
 
+::-webkit-scrollbar-thumb {
+  background-color: $color-dark;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: $color-white;
+}
 
 
 
