--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,12 @@
 @import 'vars';
-@import 'fonts';
 @import 'reset';
 @import 'libs';
 @import 'global';
 
-
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  line-height: 1.7;
+  background-color: $color-light;
+}
